--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "^20",
